--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link href="styles.css" rel="stylesheet" type="text/css" />
+    <title>Crap Portfolio</title>
   </head>
   <body>
     <header>
